# hooks

./: .pre-commit-hooks.yaml
hooks/: check_clickup_id.sh
the-hook/: .pre-commit-hooks.yaml  check_clickup_id.sh  setup.cfg
the-hook/check_clickup_id/: main.py
the-hook/check_commit/: main.py
