# setup.cfg
[metadata]
name = vromano hooks repository
description = check if commit message contains ClickUP id
version = 1.0.0
author = Vincenzo Romano
author_email = vincenzo.romano@newel.health
license = MIT
url = https://newel.health

[options]
packages = find:

[options.entry_points]
console_scripts =
    check-clickup-id = check_clickup_id.main:main